--- a/WebContent/templates/standard.xhtml
+++ b/WebContent/templates/standard.xhtml
@@ -1,24 +1,55 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
       
-<f:loadBundle basename="resources" var="msg" />
-<head>
-	<title><ui:insert name="pageTitle">Page Title</ui:insert></title>
-</head>
+<h:head>
+	<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
+	<h:outputStylesheet library="css" name="styles.css" />
+	<title>MediArea - <ui:insert name="pageTitle" /></title>
+</h:head>
 
-<body>
-	<div id="header">
-		<ui:insert name="headerContent">Page Header</ui:insert>	
+<h:body>
+	<div id="container">
+		<header>
+			<!--logo-->
+			<a href="#" id="logo"><h:graphicImage library="images" name="logo.png" alt="logo" /></a>   
+			<!--barre de recherche-->
+			<!--menu-->
+			<nav>
+				<ui:insert name="menu">
+					<ui:include src="../resources/includes/menu_basic.xhtml" />
+				</ui:insert>
+			</nav>
+		</header>
+		
+		<div id="intro">
+			<ui:insert name="intro">
+				<!--<img src="images/banner1.png"  alt="baner">-->
+			</ui:insert>
+		</div>
+		
+		<header class="group_bannner_left">
+			<hgroup>
+				<input type="text" size="56" name="recherche" />
+				<div class="button black"><a href="#">Rechercher</a></div>
+			</hgroup>
+		</header>
+		
+		<div class="holder_content">
+		 	<ui:insert name="content">
+		 		Content is empty
+		 	</ui:insert>       
+		</div>
 	</div>
-	<div id="content">
-		<ui:insert name="bodyContent">Page Body</ui:insert>	
-	</div>
-	<div id="footer">
-		<ui:insert name="footerContent">Page Footer</ui:insert>	
-	</div>
-</body>
+		
+	<footer>
+		<ui:insert name="footerContent">
+			<ui:include src="../resources/includes/footer_basic.xhtml" />
+		</ui:insert>
+	</footer>
+</h:body>
 
 </html>
