lecteur avec liens actualis?s et ressources n?cessaires

--- a/WebContent/resources/includes/menu_basic.xhtml
+++ b/WebContent/resources/includes/menu_basic.xhtml
@@ -16,7 +16,7 @@
 			<li><a href="connexion.jsf" class="current">Connexion</a></li>
 		</h:panelGroup>
 		<h:panelGroup rendered="#{beanConnexion.isConnected}">
-			<li><h:link styleClass="current" value="Deconnexion"  target="#{beanConnexion.seDeconnecter()}"/></li>
+			<li><h:link styleClass="current" value="Deconnexion" /></li>
 		</h:panelGroup>
 	</ul>
 </h:body> 
