--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -133,6 +133,10 @@ h4 span{
 	border-radius: .5em;
 }
 
+.bold{
+	font-weight:bold;
+}
+
 /***************************************************
 			    Main containers
 ***************************************************/
