--- a/WebContent/templates/standard.xhtml
+++ b/WebContent/templates/standard.xhtml
@@ -13,7 +13,7 @@
 	
 	
 	
-	
+	<!-- Lecteur audio/vidéo -->
 	
 		<!-- first: the CSS layout of LeanBack Player -->
 		<h:outputStylesheet library="css" name="leanbackPlayer.default.css" />
@@ -133,6 +133,34 @@
 			
 		  }
 		</h:outputScript>
+	
+	
+	
+	
+	
+	<!-- Estimation d'étoile -->
+	<h:outputScript name='star-rating/jquery.js' library="js"></h:outputScript>
+	<h:outputScript name='star-rating/documentation/documentation.js' library="js"></h:outputScript>
+ 	<h:outputStylesheet name='star-rating/documentation/documentation.css' library="js"/>
+ 	<!--// code-highlighting //-->
+	<h:outputScript library="js" name="star-rating/documentation/chili/jquery.chili-2.0.js"></h:outputScript> 
+	<!--//documentation/chili-toolbar/jquery.chili-toolbar.pack.js//-->
+ 	<h:outputScript library="js">try{ChiliBook.recipeFolder="documentation/chili/"}catch(e){}</h:outputScript>
+ 	<!--// plugin-specific resources //-->
+	<h:outputScript name='star-rating/jquery.MetaData.js' library="js"></h:outputScript>
+ 	<h:outputScript name='star-rating/jquery.rating.js' library="js"></h:outputScript>
+ 	<h:outputStylesheet name='star-rating/jquery.rating.css' library="js"/>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 </h:head>
 
