Commit Inscription - connexion - profil - menu - header - footer (richafecs -> primeface) gestionPlaylist - Administration

--- a/WebContent/resources/includes/footer_basic.xhtml
+++ b/WebContent/resources/includes/footer_basic.xhtml
@@ -11,10 +11,10 @@
 		<div id="FooterTwo"> &#169; 2012 MediArea </div>
 		<h:form>
 			<div id="FooterTree">
-				<h:outputLink value="#">Aide</h:outputLink> || 
-				<h:outputLink value="#">A propos</h:outputLink> || 
-				<h:outputLink value="#">Conditions d'utilisation</h:outputLink> || 
-				<h:outputLink value="#">Signaler un bug</h:outputLink>
+				<h:outputLink value="decouvrir.jsf">D&#233;couvrir MediArea</h:outputLink> | 
+				<h:outputLink value="aPropos.jsf">A propos</h:outputLink> | 
+				<h:outputLink value="conditionsGenerales.jsf">Conditions g&#233;n&#233;rales d&#39;utilisation</h:outputLink> | 
+				<h:outputLink value="mentionsLegales.jsf">Mentions l&#233;gales</h:outputLink>
 			</div> 
 		</h:form>
 	</div> 
