--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -198,7 +198,11 @@ h4 span{
 .inputRecherche{
 	font-size:14px !important;
 }
-			
+
+.message_automplete {
+    width:500px;
+}
+
 header{
 	position: relative;
 	float:left;
@@ -616,7 +620,9 @@ nav ul li a.current{
 	background:#FFFFFF;
 }
 
-
+/***************************************************
+				       DATATABLE
+***************************************************/
 
 
 /***************************************************
@@ -687,4 +693,10 @@ nav ul li a.current{
 .rf-pp-shade {
     background-color: #00000 !important;
     opacity: 1 !important;
+}
+
+/* Panel Grid */
+.noBorders tr, .noBorders td {
+    background: none !important;
+    border: none !important;
 }
