int?gration ajouter au panier dans beanPanier + corrections Recherche et Panier

--- a/WebContent/templates/standard.xhtml
+++ b/WebContent/templates/standard.xhtml
@@ -96,9 +96,9 @@
 
                         </div>
                                    
-                </header>
+                <!-- </header> -->
 
-                <header class="group_bannner_left">
+                <!-- <header class="group_bannner_left"> -->
                         <div id="recherche_simple">
                                 <h:form>
                                  <h:inputText styleClass="inputRecherche" size="56" value="#{beanRecherche.value}" />
