nouveau lecteur audio et vid?o + modif constructeur media pr type + modif main pr type + "Afficher plus de suggestions" seulement si taille liste > 20

--- a/WebContent/templates/standard.xhtml
+++ b/WebContent/templates/standard.xhtml
@@ -16,13 +16,17 @@
 
         <!-- Lecteur audio/vidéo -->
         <!-- first: the CSS layout of LeanBack Player -->
-        <h:outputStylesheet library="css" name="leanbackPlayer.default.css" />
+        <!--<h:outputStylesheet library="css" name="leanbackPlayer.default.css" />-->
         <!-- second: the Javascript file of LeanBack Player -->
-        <h:outputScript library="js" name="leanbackPlayer.pack.js" />
+        <!--<h:outputScript library="js" name="leanbackPlayer.pack.js" />-->
         <!-- third: additional language files of LeanBack Player; -->
-        <h:outputScript library="js" name="leanbackPlayer.en.js" />
-        <h:outputScript library="js" name="leanbackPlayer.de.js" />
-        <h:outputScript library="js" name="LBPoption.js" />
+        <!--<h:outputScript library="js" name="leanbackPlayer.en.js" />-->
+        <!--<h:outputScript library="js" name="leanbackPlayer.de.js" />-->
+        <!--<h:outputScript library="js" name="LBPoption.js" />-->
+        
+        <!-- Flowplayer -->
+        <script type="text/javascript" src="../resources/flash/flowplayer/flowplayer-3.2.10.min.js"></script>
+        <!--<link rel="stylesheet" type="text/css" href="style.css">-->
 
         <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
         <h:outputScript library="js" name="redirection.js" />
