--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -13,7 +13,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, ol, ul, li, form, label, legen
 }
 
 ol, ul {
-	list-style: none;
+	/*list-style: none;*/
 }
 
 a img {border:none}
