--- a/WebContent/templates/standard.xhtml
+++ b/WebContent/templates/standard.xhtml
@@ -111,7 +111,7 @@
                                 <h:form>
                                  <h:inputText styleClass="inputRecherche" size="56" value="#{beanRecherche.value}" />
                                  <p:selectOneButton styleClass="typeMedia" value="#{beanRecherche.typeMedia}">  
-                                    <f:selectItem itemLabel="All" itemValue="1" />  
+                                    <f:selectItem itemLabel="Tous" itemValue="1" />  
                                     <f:selectItem itemLabel="Video" itemValue="2" />  
                                     <f:selectItem itemLabel="Audio" itemValue="3" />  
                                 </p:selectOneButton>
